--- a/backend/package.json
+++ b/backend/package.json
@@ -9,8 +9,10 @@
   "dependencies": {
     "@google/genai": "^1.42.0",
     "@hono/node-server": "^1.19.9",
+    "@hono/zod-validator": "^0.7.6",
     "dotenv": "^17.3.1",
-    "hono": "^4.12.1"
+    "hono": "^4.12.1",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "@types/node": "^20.11.17",
