--- a/backend/package.json
+++ b/backend/package.json
@@ -11,11 +11,14 @@
     "@hono/node-server": "^1.19.9",
     "@hono/zod-validator": "^0.7.6",
     "dotenv": "^17.3.1",
+    "drizzle-orm": "^0.45.1",
     "hono": "^4.12.1",
+    "mysql2": "^3.18.0",
     "zod": "^4.3.6"
   },
   "devDependencies": {
     "@types/node": "^20.11.17",
+    "drizzle-kit": "^0.31.9",
     "tsx": "^4.7.1",
     "typescript": "^5.8.3"
   }
