--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
     "@google/genai": "^1.42.0",
     "@hono/node-server": "^1.19.9",
     "@hono/zod-validator": "^0.7.6",
+    "better-auth": "^1.4.19",
     "dotenv": "^17.3.1",
     "drizzle-orm": "^0.45.1",
     "hono": "^4.12.1",
