--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,12 +13,14 @@
     "@monaco-editor/react": "^4.7.0",
     "@tailwindcss/vite": "^4.2.0",
     "axios": "^1.13.5",
+    "better-auth": "^1.4.19",
     "clsx": "^2.1.1",
     "immer": "^11.1.4",
     "lucide-react": "^0.563.0",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
     "react-markdown": "^10.1.0",
+    "react-router-dom": "^7.13.1",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.2.0",
     "zustand": "^5.0.11"
